melhorando uso das variáveis
No ramo master
Mudanças a serem submetidas:
	modified:   .env.example
	modified:   .gitignore
	modified:   docker-compose.yml

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-# HTTP_PORT=8000
+HTTP_PORT=8000
+DB_PORT=3306
 DB_PASSWORD=mysql
 PROJECT_DIR=./project_path
+DOCKER_CONFIG_PATH=./docker-php7.4_laravel-mysql
+MYSQL_DATA_DIR=mysql_data
