--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   #PHP Service
   app:
     build:
-      context: ./docker-php7.4_laravel-mysql/
+      context: $DOCKER_CONFIG_PATH/
       dockerfile: Dockerfile
     image: digitalocean.com/php74-mysql
     container_name: app
@@ -16,7 +16,7 @@ services:
     working_dir: /var/www
     volumes:
       - $PROJECT_DIR:/var/www
-      - ./docker-php7.4_laravel-mysql/php/local.ini:/usr/local/etc/php/conf.d/local.ini
+      - $DOCKER_CONFIG_PATH/php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
       - app-network
 
@@ -27,10 +27,10 @@ services:
     restart: unless-stopped
     tty: true
     ports:
-      - "$HTTP_PORT:80"
+      - "${HTTP_PORT:-8000}:80"
     volumes:
-      - $PROJECT_DIR:/var/www
-      - ./docker-php7.4_laravel-mysql/nginx/conf.d/:/etc/nginx/conf.d/
+      - "$PROJECT_DIR:/var/www"
+      - "$DOCKER_CONFIG_PATH/nginx/conf.d/:/etc/nginx/conf.d/"
     networks:
       - app-network
 
@@ -38,16 +38,16 @@ services:
   mysql:
     image: mysql:5.7
     environment:
-      MYSQL_ROOT_PASSWORD: $DB_PASSWORD
-      MYSQL_DATABASE: "mysql_start_base"
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-mysql}
+      MYSQL_DATABASE: "mysql"
     ports:
-      - "3306:3306"
+      - "${DB_PORT:-3306}:3306"
+    expose:
+      - ${DB_PORT:-3306}
     volumes:
-      - ./docker-php7.4_laravel-mysql/mysql_data:/var/lib/mysql
+      - "$DOCKER_CONFIG_PATH/$MYSQL_DATA_DIR:/var/lib/mysql"
     networks:
       - app-network
-    expose: 
-      - 3306
 
 #Docker Networks
 networks:
